[package]
name = "redirected"
version = "0.5.2"
authors = []
description = "Redirect local traffic somewhere else."
edition = "2018"

[dependencies]
env_logger = { version = "0.8", default-features = false, features = ["humantime"] }
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "server", "http1", "tcp", "stream"] }
hyper-rustls = "0.22"
log = "0.4"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
tokio = { version = "1.0" , features = ["fs", "io-util", "macros", "rt"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
